<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  -->
    <string name="app_name">E-Menu</string>
    <string name="action_settings">Panier</string>

    <!--  -->
    <string name="button_fr_FR">FRANÇAIS</string>
    <string name="button_en_EN">ENGLISH</string>

    <!--  -->
    <string name="title_activity_show_main_menu">Main Page</string>
    <string name="title_activity_menu_carte">À la Carte</string>
    <string name="title_activity_menu_menus">Liste des Menus</string>
    <string name="title_activity_menu_children">Pour les Enfants</string>
    <string name="title_activity_menu_search">Recherche/Filtre</string>
    <string name="title_activity_menu_wines">Carte des Vins</string>
    <string name="title_activity_menu_drinks">Carte des Boissons</string>
    <string name="title_activity_menu_desserts">MenuDesserts</string>
    <string name="title_activity_show_menus_as_pop_up">ShowMenusAsPopUp</string>

    <!--  -->
    <string name="main_menu_carte">À la Carte</string>
    <string name="main_menu_menus">Menus</string>
    <string name="main_menu_drinks">Boissons</string>
    <string name="main_menu_wines">Carte des Vins</string>
    <string name="main_menu_enfants">Pour les\nEnfants</string>
    <string name="main_menu_recherche">Recherche</string>

    <!--  -->

    <!--  -->
    <string name="menu_carte">À la Carte</string>
    <string name="menu_menus">Menus</string>
    <string name="menu_drinks">Boissons</string>
    <string name="menu_wines">Carte des Vins</string>
    <string name="menu_children">Pour les Enfants</string>
    <string name="menu_desserts">Desserts</string>
    <string name="menu_search">Recherche - Filtres</string>

    <!-- Carte -->
    <string name="carte_starters">Entrées</string>
    <string name="carte_meals">Plats</string>
    <string name="carte_desserts">Desserts</string>
    <string name="carte_drinks">Boissons</string>
    <string name="carte_wines">Carte des Vins</string>

    <!--  -->
    <string name="addToBasket">Ajouter au Panier</string>
    
    <!--  -->
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Hello world!</string>
    <string name="title_activity_carte">Carte</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_basket">Panier</string>
    <string name="emptyBasket">Vider le panier</string>
    <string name="validateBasket">Commander</string>
    <string name="minusOne">-</string>
    <string name="plusOne">+</string>
    <string name="product">Produit</string>
    <string name="itemName">itemName</string>
    <string name="itemPrice">itemPrice</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    

</resources>