<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/navHome"
        style="@style/NavigationItem"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/navCarte"
        style="@style/NavigationItem"
        android:text="@string/main_menu_carte" />

    <TextView
        android:id="@+id/navMenus"
        style="@style/NavigationItem"
        android:text="@string/main_menu_menus" />

    <TextView
        android:id="@+id/navChildren"
        style="@style/NavigationItem"
        android:text="@string/main_menu_enfants" />

    <TextView
        android:id="@+id/navSearch"
        style="@style/NavigationItem"
        android:text="@string/main_menu_recherche" />

    <TextView
        android:id="@+id/navBasket"
        style="@style/NavigationItem"
        android:text="@string/action_basket" />

</LinearLayout>