<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainMenuTableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center" >

    <!-- 3 columns -->

    <TableRow
        android:id="@+id/mainMenuTableRow1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5" >

        <Button
            android:id="@+id/showMenuCarte"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:text="@string/main_menu_carte" />

        <Button
            android:id="@+id/showMenuMenus"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:text="@string/main_menu_menus" />
    </TableRow>

    <TableRow
        android:id="@+id/mainMenuTableRow3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5" >

        <Button
            android:id="@+id/showMenuChildren"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:text="@string/main_menu_enfants" />

        <Button
            android:id="@+id/showMenuSearch"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:text="@string/main_menu_recherche" />
    </TableRow>

</TableLayout>