<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/basketLayout"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/minusOne"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_gravity="left"
        android:text="@string/minusOne"
        android:textAlignment="center" />
    
    <TextView
        android:id="@+id/product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal|fill_horizontal|center"
        android:layout_weight="1"
        android:text="@string/product"
        android:textAlignment="center" />

    <Button
        android:id="@+id/plusOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/plusOne"
        android:textAlignment="center" />

</LinearLayout>