<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/itemName" />

    <Button
        android:id="@+id/itemRemoveFromBasket"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/minus" />

    <Button
        android:id="@+id/itemAddToBasket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/itemRemoveFromBasket"
        android:layout_toStartOf="@id/itemRemoveFromBasket"
        android:text="@string/plus" />

    <TextView
        android:id="@+id/itemQuantity"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:layout_toLeftOf="@id/itemAddToBasket"
        android:layout_toStartOf="@id/itemAddToBasket" />

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/itemQuantity"
        android:layout_toStartOf="@id/itemQuantity"
        android:text="@string/itemPrice" />

</RelativeLayout>